Using Container, Row, Col

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,1 @@
-div{height:250px;background:purple;color:#fff;font-size:50px;margin:20px}
+.row{background:orange;border:3px solid #6e4905;padding:5px;margin:10px}.col{background:#d40655;color:#fff;font-size:50px;border:2px solid #640328}
