--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -2,10 +2,26 @@ main {
 
 }
 
-div {
-  height: 250px;
-  background: purple;
+// div {
+//   min-height: 250px;
+//   background: purple;
+//   color: white;
+//   font-size: 50px;
+//   margin: 20px;
+// }
+
+.container {
+  //background: green;
+}
+.row {
+  background: orange;
+  border: 3px solid rgb(110, 73, 5);
+  padding: 5px;
+  margin: 10px;
+}
+.col {
+  background: #d40655;
   color: white;
   font-size: 50px;
-  margin: 20px;
+  border: 2px solid #640328;
 }
