--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,1 @@
-.row{background:orange;border:3px solid #6e4905;padding:5px;margin:10px}.col{background:#d40655;color:#fff;font-size:50px;border:2px solid #640328}
+.row{background:orange;border:3px solid skyblue;padding:5px;margin:10px}.columna{color:#fff;font-size:25px;background:#05077b;border:5px solid #fff}
