--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -10,18 +10,16 @@ main {
 //   margin: 20px;
 // }
 
-.container {
-  //background: green;
-}
 .row {
   background: orange;
-  border: 3px solid rgb(110, 73, 5);
+  border: 3px solid skyblue;
   padding: 5px;
   margin: 10px;
 }
-.col {
-  background: #d40655;
+
+.columna {
   color: white;
-  font-size: 50px;
-  border: 2px solid #640328;
+  font-size: 25px;
+  background: #05077b;
+  border: 5px solid white;
 }
