--- a/sass/base/_fonts.scss
+++ b/sass/base/_fonts.scss
@@ -1,10 +1,15 @@
 body {
-  
+  font-family: 'Tajawal', sans-serif;
   h1,
   h2,
   h3,
   h4,
   h5,
   h6 {
+    font-family: 'Fira Sans Condensed', sans-serif;
+  }
+  h1 {
+    font-size: 2.5rem;
+    color: $color1;
   }
 }
