--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -2,10 +2,36 @@ main {
 
 }
 
-// div {
-//   min-height: 250px;
-//   background: purple;
-//   color: white;
-//   font-size: 50px;
-//   margin: 20px;
-// }
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.hero {
+  background: $color3;
+  min-height: 450px;
+  &__main {
+    padding: 3rem;
+    h2 {
+      font-size: 1.5rem;
+      color: $color2;
+    }
+  }
+  &__picture {
+    width: 200px;
+    height: 200px;
+    margin: 20px;
+    border: 5px solid black;
+  }
+  &__footer {
+    &-img {
+      border-radius: 25px;
+      border: 2px solid $color4;
+      @media screen and (min-width: 700px) {
+        max-width: 500px;
+      }
+    }
+  }
+}
